# import-bot

./: INSTALL.md  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  db.py
bot/handlers/: __init__.py  categories.py  common.py  import_cmd.py  products.py  schedule.py  setup.py
bot/roapp/: client.py  models.py
bot/services/: importer.py  scheduler.py
bot/telegram/: formatter.py  publisher.py
